<resources>
    <string name="app_name">Personal Medipal</string>
    <string name="title_activity_signin">Sign in</string>
    <string name="title_fingerprint">One-touch Sign In</string>
    <string name="desc_fingerprint">Please place your fingertip on the scanner to verify your identity</string>
    <string name="note">(Fingerprint sign in makes your app login much faster. Your device should have at least one fingerprint registered in device settings)</string>
    <string name="title_activity_home">Fingerprint</string>
    <string name="activity_home_desc">You have successfully logged in with fingerprint authentication</string>
    <string name="activity_home_note">Close and re-open the app to see the fingerprint auth screen again</string>
    <string name="action_add_favourite">Add PersonalBio</string>
    <string name="action_play_next">Add ICE</string>
    <string name="backdrop_title">MediPAL</string>
    <string name="backdrop_subtitle">DASHBOARD</string>
        <string-array name="Priority">
            <item>1</item>
            <item>2</item>
            <item>3</item>
            </string-array>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email
        completions.</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="title_activity_home_screen">HomeScreen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_registration">Welcome to MediPal. To help us assist you, please input your personal bio.</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="title_slide1">Welcome to MediPal!</string>
    <string name="desc_slide1">Your one stop Personal Health Assistant..</string>
    <string name="title_slide2">Track Measurements!</string>
    <string name="desc_slide2">It records your health statistics and notify remainders on need..</string>
    <string name="title_slide3">Manage Medicines</string>
    <string name="desc_slide3">Helps you manage Medication and appointments..</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="Add_personal_Bio">Potential personal bio form</string>
    <string name="Add_ICE">ICE Details</string>

    <!-- Strings related to measurement -->
    <string name="fragment_measurement">Measurement</string>
    <string name="fragment_measure_blood_pressure">Blood Pressure</string>
    <string name="fragment_measure_pulse">Pulse</string>
    <string name="fragment_measure_temperature">Temperature</string>
    <string name="fragment_measure_weight">Weight</string>
    <string name="fragment_medicine_list">Medication</string>
    <string name="fragment_consumption_list">Consumption</string>
    <string name="fragment_measurement_list">Measurement</string>
    <string name="text_personal_bio">Personal Bio</string>
    <string name="text_medicine">Medicine</string>
    <string name="text_appointment">Appointment</string>
    <string name="text_my_details">My Details</string>
    <string name="text_health_bio">Health Bio</string>
    <string name="text_ice">ICE</string>
    <string name="text_measurement">Measurement</string>
    <string name="text_blood_pressure">Blood Pressure</string>
    <string name="text_systolic">Systolic</string>
    <string name="text_diastolic">Diastolic</string>
    <string name="text_measured_on">Measured On</string>
    <string name="text_pulse">Pulse</string>
    <string name="text_weight">Weight</string>
    <string name="text_temperature">Temperature</string>
    <string name="text_consumption">Consumption</string>
    <string name="text_medication">Medication</string>
    <string name="text_filter">Filter records: </string>

    <string name="button_personal_bio">Personal Bio</string>
    <string name="button_medicine">Medicine</string>
    <string name="button_appointment">Appointment</string>
    <string name="button_my_details">My Details</string>
    <string name="button_health_bio">Health Bio</string>
    <string name="button_ICE">ICE</string>
    <string name="button_measurement">Measurement</string>
    <string name="button_consumption">Consumption</string>
    <string name="button_filter">Filter</string>

    <string name="checkbox_appt_notification">Notification</string>

    <string name="button_add">Add</string>
    <string name="button_update">Update</string>
    <string name="button_delete">Delete</string>
    <string name="button_cancel">Cancel</string>

    <string name="edit_text_appt_date">Date</string>
    <string name="edit_text_appt_ID">Appointment ID</string>

    <string name="error_invalid_data">Invalid data</string>
    <string name="save_success">Saved successfully</string>
    <string name="delete_success">Deleted successfully</string>

    <string name="btn_remove">Remove</string>
    <string name="placeholder">Placeholder</string>
    <string name="title_activity_add_member">Add Member</string>
    <string name="first_name">First Name</string>
    <string name="sur_name">Surname</string>
    <string name="second_name">Second Name</string>
    <string name="save">Save</string>
    <string name="title_activity_add_facility">Add Facility</string>
    <string name="fac_name">Facility Name</string>
    <string name="fac_desc">Facility Description</string>
    <string name="fac_name_validation_msg">Please fill in category name</string>
    <string name="fac_desc_validation_msg">Please fill in category description</string>
    <string name="first_name_validation_msg">Please fill in first name</string>
    <string name="second_name_validation_msg">Please fill in second name</string>
    <string name="sur_name_validation_msg">Please fill in surname</string>
    <string name="mem_select_validation_msg">Please select a medicine</string>
    <string name="fac_select_validation_msg">Please select a category</string>
    <string name="save_successful">Saved successfully!</string>
    <string name="generic_error">Sorry something went wrong! We\'re looking into it!</string>
    <string name="empty_value">Add new ones to appear here!!</string>
    <string name="date_select">Date</string>
    <string name="strt_time_select">Start Time</string>
    <string name="end_time_select">End Time</string>
    <string name="title_activity_add_booking">Add Booking</string>
    <string name="txt_member">Member</string>
    <string name="txt_facility">Facility</string>
    <string name="st_time_et_time_validation_msg">Start time should be greater than End time</string>
    <string name="date_validation_msg">Please select a valid date for booking</string>
    <string name="time_validation_msg">Please select a valid time for booking</string>
    <string name="category_name">Category Name</string>
    <string name="category_code">Code</string>
    <string name="category_description">Description</string>
    <string name="category_reminder">Reminder</string>
    <string name="btn_update">Update</string>
    <string name="title_activity_update_facility">Update Category</string>
    <string name="title_activity_update_member">Update Medicine</string>

    <!--<string name="app_name">Medicine Management</string>-->
    <!--<string name="action_settings">Settings</string>-->
    <!--<string name="section_format">Hello World from section: %1$d</string>-->

    <string name="medicine_name">Medicine Name</string>
    <string name="medicine_desc">Medicine Description</string>

    <string name="cat_id">Category Type</string>
    <string name="reminder">Reminder</string>
    <string name="quantity">Quantity</string>
    <string name="dosage">Dosage</string>
    <string name="threshold">Threshold</string>
    <string name="date_issued">Date Issued</string>
    <string name="expiry_factor">Expiry Factor</string>

    <string name="med_name_validation_msg">Please fill in medicine name</string>
    <string name="med_desc_validation_msg">Please fill in medicine description</string>
    <string name="cat_id_validation_msg">Please choose category</string>
    <string name="title_activity_add_medicine">Add Medicine</string>

    <string name="category">Category</string>

    <string name="cat">CATEGORY</string>
    <string name="code">Code</string>
    <string name="title_activity_add_reminder">Add Reminder</string>

    <string-array name="categoryNames">
        <item>Supplement</item>
        <item>Chronic</item>
        <item>Incidental</item>
        <item>Complete Course</item>
        <item>Self Apply</item>
    </string-array>

    <string-array name="filter_cat">
        <item>time</item>
        <item>category</item>
        <item>medicine</item>
    </string-array>

    <string-array name="filter_category">
        <item>Supplement</item>
        <item>Chronic</item>
        <item>Incidental</item>
        <item>Complete Course</item>
        <item>Self Apply</item>
    </string-array>

    <string-array name="filter_medicine">
        <item>M1</item>
        <item>M2</item>
    </string-array>

    <!-- Health Bio -->
    <string name="empty_view_title_text">Please provide your Health Bio!</string>
    <string name="empty_view_subtitle_text">To Serve you better :)</string>
    <string name="editor_activity_title_add">Add Health Bio</string>
    <string name="editor_activity_title_edit">Edit Health Bio</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="editor_insert_health_bio_successful">Health Bio saved</string>
    <string name="editor_insert_health_bio_failed">Error while saving Health Bio</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Health Bio?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="medical_condition_text">Medical Condition</string>
    <string name="editor_updt_hlth_bio_success">Health Bio updated</string>
    <string name="editor_update_health_bio_failed">Error while updating Health Bio</string>
    <string name="hint_Condition">Condition/Allergy</string>
    <string name="spinner_select">Select Value</string>
    <string name="spinner_condition">Condition(C)</string>
    <string name="spinner_allergy">Allergy(A)</string>
    <string name="start_date">Start Date</string>
    <string name="condition_type">Condition Type</string>
    <string name="editor_delete_health_bio_successful">Health Bio deleted</string>
    <string name="editor_delete_health_bio_failed">Error while deleting Health Bio</string>
    <string name="action_delete_all_entries">Delete all Health Bio</string>

    <string name="action_health_bio">Health Bio</string>
    <string name="text_measured_on_date">Measured On Date</string>
    <string name="text_measured_on_time">Measured On Time</string>
    <string name="text_register">Register</string>
    <string name="text_update">Update</string>

</resources>