<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="iss.nus.edu.medipalappln.activity.AddMedicineActivity"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            >

            <LinearLayout
                android:id="@+id/relative_layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                >

                <EditText
                    android:id="@+id/et_medName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/medicine_name"
                    />

                <EditText
                    android:id="@+id/et_medDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/medicine_desc"
                    android:layout_below="@id/et_medicine_name"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:layout_below="@id/et_medicine_desc"
                    android:layout_marginLeft="22dp"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="20dp"
                    android:id="@+id/tv_cat_id"
                    android:textStyle="bold"
                    />
                <Spinner
                    android:id="@+id/spn_facility_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/tv_cat_id"
                    >
                </Spinner>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/rem_switch_layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relative_layout1"
                android:orientation="horizontal"
                >

                <Switch
                    android:id="@+id/rem_upd_switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:text="Reminder"
                    android:textOff="OFF"
                    android:textOn="ON"
                    />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/reminder_content_update_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_below="@+id/rem_switch_layout2"
                android:orientation="vertical"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_remindFreq_upd"
                        android:text="Frequency"
                        android:textStyle="bold"
                        android:layout_marginLeft="22dp"
                        android:layout_marginStart="22dp"
                        android:layout_marginTop="30dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        />
                    <EditText
                        android:id="@+id/et_remind_freq_update"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="Frequency"
                        android:layout_below="@id/tv_remindFreq_upd"
                        android:layout_alignLeft="@id/tv_remindFreq_upd"
                        android:layout_alignStart="@id/tv_remindFreq_upd"
                        android:inputType="number"
                        android:focusable="true"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_stTime_upd"
                        android:text="@string/strt_time_select"
                        android:textStyle="bold"
                        android:layout_centerHorizontal="true"
                        android:layout_alignBaseline="@id/tv_remindFreq_upd"
                        />

                    <EditText
                        android:id="@+id/select_start_time_update"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/strt_time_select"
                        android:layout_toRightOf="@id/et_remind_freq_update"
                        android:layout_toEndOf="@id/et_remind_freq_update"
                        android:layout_alignStart="@id/tv_stTime_upd"
                        android:layout_alignLeft="@id/tv_stTime_upd"
                        android:focusable="true"
                        android:inputType="datetime"
                        android:layout_alignBaseline="@id/et_remind_freq_update"
                        />

                    <EditText
                        android:id="@+id/et_remindInterval_update"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:hint="in Hrs"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignBaseline="@id/et_remind_freq_update"
                        android:inputType="number"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_remindInterval"
                        android:text="Interval"
                        android:layout_alignBaseline="@id/tv_stTime_upd"
                        android:textStyle="bold"
                        android:layout_marginTop="30dp"
                        android:layout_alignLeft="@id/et_remindInterval_update"
                        android:layout_alignStart="@id/et_remindInterval_update"
                        />
                </RelativeLayout>


            </LinearLayout>
            <LinearLayout
                android:id="@+id/relative_layout4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_below="@+id/reminder_content_update_layout"
                android:orientation="vertical"
                >

                <EditText
                    android:id="@+id/et_quantity_upd"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/quantity"
                    />

                <EditText
                    android:id="@+id/et_medDosage_upd"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/dosage"
                    android:layout_below="@id/et_quantity_upd"
                    />

                <EditText
                    android:id="@+id/et_medThreshold_upd"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/threshold"
                    android:layout_below="@+id/et_medDosage_upd"/>

                <EditText
                    android:id="@+id/et_medDateIssued_upd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/date_issued"
                    android:layout_below="@id/et_medThreshold_upd"
                    />

                <EditText
                    android:id="@+id/et_medExpiryFactor_upd"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/expiry_factor"
                    android:layout_below="@id/et_medDateIssued_upd"
                    />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_med_update"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>

